Правки по коду